jQuery fix for google ads links on mobile - make sure the ad replaces iUI, not loads inside it.
--HG--
extra : convert_revision : 8666a207e86b1b1a40c8ebe2528f4f616e0594be

--- a/static/css/iphone.css
+++ b/static/css/iphone.css
@@ -30,7 +30,7 @@
 	position: absolute;
 }
 
-.google_ads {
+.google_ads_spacing {
   padding-top: 5px;
   padding-bottom: 15px;
 }
